php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #40012 php_date.c doesnt compile
Submitted: 2007-01-03 14:34 UTC Modified: 2007-01-03 14:47 UTC
From: gk at gknw dot de Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5CVS-2007-01-03 (snap) OS: NetWare
Private report: No CVE-ID: None
 [2007-01-03 14:34 UTC] gk at gknw dot de
Description:
------------
Compilation of ./ext/date/php_date.c fails for NetWare platform because we have a '#define tzname ...' in time.h;
this clashes with the usage of tzname in PHP_FUNCTION(timezone_name_from_abbr) starting at line 2061.
Proposed fix: rename tzname with tzid as used already at other places.

In addition related to same file php_date.c:
since the major rewrite of the date stuff with PHP 5.1.x the automatic guess of a proper timezone doesnt work any longer. For this I have written few NetWare-specific lines and inserted right after the Win32-specific code.
Unified diff can be downloaded from my site:
http://www.gknw.net/test/php_issues/php_date.c.diff


Actual result:
--------------
compilation breaks in php_date.c inside PHP_FUNCTION(timezone_name_from_abbr).


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-01-03 14:47 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in CVS, thanks for your patch!
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 10:00:02 2026 UTC