- Fixed bug #40012 (php_date.c doesnt compile on Netware).