ext/date/php_date.c
@@ -623,6 +623,14 @@ php_win_std_time:
 		}
 		return tzid;
 	}
+#elif defined(NETWARE)
+	/* Try to guess timezone from system information */
+	{
+		char *tzid = timelib_timezone_id_from_abbr("", ((_timezone * -1) + (daylightOffset * daylightOnOff)), daylightOnOff);
+		if (tzid) {
+			return tzid;
+		}
+	}
 #endif
 	/* Fallback to UTC */
 	php_error_docref(NULL TSRMLS_CC, E_WARNING, DATE_TZ_ERRMSG "We had to select 'UTC' because your platform doesn't provide functionality for the guessing algorithm");
@@ -2061,7 +2069,7 @@ PHP_FUNCTION(timezone_name_get)
 PHP_FUNCTION(timezone_name_from_abbr)
 {
 	char    *abbr;
-	char    *tzname;
+	char    *tzid;
 	int      abbr_len;
 	long     gmtoffset = -1;
 	long     isdst = -1;
@@ -2069,10 +2077,10 @@ PHP_FUNCTION(timezone_name_from_abbr)
 	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "s|ll", &abbr, &abbr_len, &gmtoffset, &isdst) == FAILURE) {
 		RETURN_FALSE;
 	}
-	tzname = timelib_timezone_id_from_abbr(abbr, gmtoffset, isdst);
+	tzid = timelib_timezone_id_from_abbr(abbr, gmtoffset, isdst);
 
-	if (tzname) {
-		RETURN_STRING(tzname, 1);
+	if (tzid) {
+		RETURN_STRING(tzid, 1);
 	} else {
 		RETURN_FALSE;
 	}
